// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`doGetDesigners() action creator should create the correct actions for when the get designers procedure is successful without receiving options: Get product DESIGNERS success payload without receiving options 1`] = `
Object {
  "payload": Object {
    "entities": Object {
      "designerResults": Object {
        "/undefined?categoryid=123": Object {
          "hash": "/undefined?categoryid=123",
          "result": Array [
            Object {
              "gender": "",
              "list": Array [
                Object {
                  "description": "Yup",
                  "image": "",
                  "slug": "a-peace-treaty",
                  "slugSuffix": null,
                  "title": "A Peace Treaty",
                },
              ],
              "slug": "A",
              "title": "A",
            },
          ],
        },
      },
    },
    "hash": "/undefined?categoryid=123",
    "result": "/undefined?categoryid=123",
  },
  "type": "@farfetch/blackout-core/GET_DESIGNERS_SUCCESS",
}
`;

exports[`doGetDesigners() action creator should create the correct actions for when the get designers procedure is successful: Get product DESIGNERS success payload 1`] = `
Object {
  "payload": Object {
    "entities": Object {
      "designerResults": Object {
        "/us?categoryid=123": Object {
          "hash": "/us?categoryid=123",
          "result": Array [
            Object {
              "gender": "",
              "list": Array [
                Object {
                  "description": "Yup",
                  "image": "",
                  "slug": "a-peace-treaty",
                  "slugSuffix": null,
                  "title": "A Peace Treaty",
                },
              ],
              "slug": "A",
              "title": "A",
            },
          ],
        },
      },
    },
    "hash": "/us?categoryid=123",
    "result": "/us?categoryid=123",
  },
  "type": "@farfetch/blackout-core/GET_DESIGNERS_SUCCESS",
}
`;
